crates/toml/tests/snapshots/invalid/key/dotdot.stderr
TOML parse error at line 1, column 1
  |
1 | .. = 1
  | ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`

---
TOML parse error at line 1, column 2
  |
1 | .. = 1
  |  ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`

---
TOML parse error at line 1, column 4
  |
1 | .. = 1
  |    ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
